Peer review fixes. - Nav bar overflow - Btn visibility

--- a/Assets/SCSS/about.scss
+++ b/Assets/SCSS/about.scss
@@ -36,7 +36,7 @@ main {
 
 @media (max-width: 992px) {
     main {
-        margin-left: 100px;
+        margin-left: 150px;
         #about-me {
             p {
                 .line-br {
