--- a/Assets/SCSS/code-examples.scss
+++ b/Assets/SCSS/code-examples.scss
@@ -277,9 +277,9 @@ main {
 
 @media (max-width: 992px) {
     main {
-        margin-left: 100px;
+        margin-left: 150px;
         .modal {
-            width: calc(100% - 100px);
+            width: calc(100% - 150px);
         }
     }
 }
