--- a/Assets/SCSS/main.scss
+++ b/Assets/SCSS/main.scss
@@ -395,7 +395,7 @@ main {
                     border: 0;
                     font-size: 1.2rem;
                     color: $textPrimary;
-                    text-shadow: 0 0 2px $shadowDark;
+                    text-shadow: 0 0 3px $shadowDark;
                     padding: 7px;
                     border-radius: 15px;
                     text-transform: uppercase;
