--- a/Assets/SCSS/scs.scss
+++ b/Assets/SCSS/scs.scss
@@ -40,7 +40,7 @@ main {
 
 @media (max-width: 992px) {
     main {
-        margin-left: 100px;
+        margin-left: 150px;
     }
 }
 
